@@ -795,7 +795,9 @@ Tcl_UnloadObjCmd(
 
 	    if (unLoadProcPtr != NULL) {
 		Tcl_MutexLock(&packageMutex);
-		(*unLoadProcPtr)(pkgPtr->loadHandle);
+		if (pkgPtr->unloadProc != NULL) {
+		    (*unLoadProcPtr)(pkgPtr->loadHandle);
+		}
 
 		/*
 		 * Remove this library from the loaded library cache.
@@ -1152,7 +1154,7 @@ TclFinalizeLoad(void)
 
 	if (pkgPtr->fileName[0] != '\0') {
 	    Tcl_FSUnloadFileProc *unLoadProcPtr = pkgPtr->unLoadProcPtr;
-	    if (unLoadProcPtr != NULL) {
+	    if ((unLoadProcPtr != NULL) && (pkgPtr->unloadProc != NULL)) {
 		(*unLoadProcPtr)(pkgPtr->loadHandle);
 	    }
 	}
