@@ -1,3 +1,12 @@
+2008-10-06  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* tclWinTest.c: Fix compiler warning when compiling this file with mingw gcc:
+    tclWinTest.c:706: warning: dereferencing type-punned pointer will break
+    strict-aliasing rules
+	* generic/tclLoad.c: Make sure that any library which doesn't have an
+	unloadproc is only really unloaded when no library code is executed
+	yet. [Bug 2059262]
+
 2008-10-06  Joe Mistachkin  <joe@mistachkin.com>
 
 	* tools/man2tcl.c: Added missing line from patch by Harald Oehlmann.
